Added Styles and Accordion JS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="icon"
       type="image/png"
@@ -13,17 +19,24 @@
     />
 
     <title>Frontend Mentor | FAQ Accordion Card</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style></style>
   </head>
   <body>
     <main class="container">
-      <div class="banner-image">
+      <div class="internet-box-image">
         <img
-          src="./images/illustration-woman-online-mobile.svg"
-          alt="Woman online"
+          class="box-image"
+          src="./images/illustration-box-desktop.svg"
+          alt="Internet Box"
         />
+      </div>
+      <div class="outer-overflow">
+        <div class="banner-image">
+          <img
+            class="woman-image"
+            src="./images/illustration-woman-online-mobile.svg"
+            alt="Woman online"
+          />
+        </div>
       </div>
 
       <section class="faq">
@@ -75,7 +88,9 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/YanBaetas/">Yan Baetas</a>.
     </footer>
+
+    <script src="./script.js"></script>
   </body>
 </html>
