Change banner images

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
       <div class="outer-overflow">
         <div class="banner-image">
           <img
-            class="woman-image"
+            class="woman-image-mobile"
             src="./images/illustration-woman-online-mobile.svg"
+            alt="Woman online"
+          />
+          <img
+            class="woman-image-desktop"
+            src="./images/illustration-woman-online-desktop.svg"
             alt="Woman online"
           />
         </div>
